--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
       # url: "https://facebook.com/"
     - label: GitHub
       icon: fab fa-fw fa-github
-      url: https://github.com/punsoo
+      url: https://github.com/sonakeee
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -130,7 +130,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: https://github.com/punsoo
+      # url: https://github.com/sonakeee
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
