--- a/_config.yml
+++ b/_config.yml
@@ -84,12 +84,15 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
 
+
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag"
+  # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "G-5R60S6CPSY"
     anonymize_ip         : # true, false (default)
+
 
 
 # Site Author
@@ -262,6 +265,7 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
 
 
 # Defaults
