--- a/_config.yml
+++ b/_config.yml
@@ -277,6 +277,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      read_time: true
       comments: true
       share: false
       related: true
